[tool.poetry]
name = "songs"
version = "0.1.0"
description = ""
authors = ["iiTzArcur <zefanjaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
colorama = "^0.4.6"
pandas = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
